<resources>
    <string name="app_name">Wisata Leihitu Barat</string>
    <string name="batuduacafe">Di Kecamatan Leihitu Barat, tepatnya Negeri Hatu, terdapat salah satu spot wisata klasik yang terkenal dengan nama Batu Dua. Lokasi ini dimodifikasi dengan gaya klasik mulai dari penataan ruang istirahat, ruang makan, hingga tempat santai untuk para pengujung.
      Selain bisa menikmati kesejukan alam, melihat pemandangan yang indah, para wisatawan bisa menikmati beberapa sajian makanan dan minum khas Kota Ambon dan khas Eropa.
      Tak heran jika ditempat ini lebih banyak dikunjungi oleh wisatawan luar negeri seperti Belanda, Jerman, Portugal, China, Thailand, America, Italia,  bila dibandingkan dengan pengunjung lokal.
      Lokasi Batu Dua tidak begitu jauh dari pusat kota, hanya membutuhkan waktu maksimal 30 menit dengan menggunakan transportasi darat. Lokasi ini sangat dekat dengan Bandara Pattimura Ambon, sehingga para wisatawan yang baru tiba di Ambon bisa menempuh perjalanan 7 menit saja. </string>
    <string name="batukapal">Batu Kapal Liliboi atau yang dikenal juga dengan Batu Lubang Liliboi berada di pantai yang berbatu dan tidak memiliki hamparan pasir putih. Keunikannya adalah batu karang ini berbentuk menyerupai lambung kapal dan mempunyai lubang kecil. Lubang ini merupakan salah satu akses untuk dapat masuk ke bagian dalam Batu Kapal. Lubang ini berukuran lebar sekitar 3 meter persegi. Pantai Batu Kapal memiliki tebing-tebing yang tinggi sekitar 30 meter dpl, memiliki air yang sangat bening dengan dasar yang berbatu, dan di sepanjang pesisir  pantai dipenuhi dengan kerikil-kerikil.
  Kawasan wisata Batu Kapal mulai dipublikasikan pada tahun 2016, dan sejak tahun 2018 hingga kini menjadi spot wisata popular bagi wisatawan lokal maupun internasional.Terdapat dua bagian pada Batu Kapal, yaitu bagian luar dan dalam kapal.
-	Bagian luar: setelah menuruni anak tangga sampai di pantai yang tidak berpasir, hanya kerikil-kerikil dengan air laut yang jernih dan biru. Pada lokasi ini terlihat bebatuan karang besar yang menyerupai sebuah kapal (bagian yang terlihat jelas adalaha anjungan dan sebuah lubang besar menyerupai jendela kapal). Cocok untuk bersantai sambil menikamati pemandangan pantai ataupun snorkeling.
-	Bagian dalam: terdapat pantai yang terpisah dengan pantai di bagian luar yang dikelilingi tebing-tebing tinggi. Pantai ini merupakan pantai air tawar dengan kedalaman 30 cm hingga 2 meter. Cocok untuk berenang dan bersantai.</string>
    <string name="puncaklove">Ada sebuah destinasi Wisata Maluku yang cocok bagi pasangan muda-mudi di Pulau Ambon.
Terutama, bagi kalian yang ingin memperoleh vibes romantis dengan pemandangan pantai dan bukit. Puncak Love jadi tujuan menarik yang harus ada dalam bucketlist pasangan muda-mudi.
Terletak di Desa Allang, Kecamatan Lehitu Barat, Maluku Tenggah, Wisata Maluku satu ini mudah untuk diakses dari pusat Kota Ambon.
Untuk mencapai Puncak Love ini, para pelancong dari Kota Ambon membutuhkan waktu setidaknya 1 jam menggunakan kedaraan beroda dua atau empat.
Dari pusat Kota Ambon, pengunjung akan melewati Bandara Internasional Pattimura Ambon, kemudian sejumlah desa di kawasan Kecamatan Leihitu akan dilewati sepanjang perjalanan.
Sebelum memasuki pemukiman warga, pemandangan tersapu di sisi kiri jalan utama bertuliskan Selamat Datang di Desa Allang.
Di sini pemberhentian untuk bisa masuk ke Puncak Love.
Begitu turun dari kendaraan, Anda akan dimanjakan dengan visualisasi pantai dan bukit di sekitaran pesisir pantai di Desa Allang.
Ada pojok foto bagi wisatawan yang ingin mengabadikan pemandangan tersebut melalui gawainya.
Sebuah replika kapal yang terbuat dari beton dan kayu, disediakan bagi pengunjung untuk berswafoto atau sekedar mengagumi keindahan alam sekitar.
Sesuai namanya, Puncak Love, pemandangan dari ketinggian ini dilatar belakangi sebuah landscape berbentuk hati.
Membuat penjalanan liburan kalian semakin romantis.
Selain itu, jika kalian cape karena melewati perjalanan panjang, ada empat gazebo yang disediakan untuk bersantai bersama orang terkasih.
Untuk bisa menikmati suasana romantis di Puncak Love, pengunjung hanya merogoh kocek Rp. 3.000 untuk tiket masuknya.
</string>
    <string name="huluwa">Pantai Huluwa merupakan pantai berbatu dengan gugusan batu karang yang unik di sepanjang pantai dan dikelilingi oleh pohon-pohon bonsai yang berumur ratusan tahun.  Arti nama Huluwa berasal dari bahasa Wakasihu, yaitu ‘Hulu’ yang berarti nama kebun di lokasi pantai itu berada dan ‘Uwa’ yang berarti tanjung, karena lokasi pantai ini berada tepat di tanjung. Pantai ini buka untuk umum pada tahun 2015, dan semenjak itu Pantai Huluwa didatangi oleh banyak wisatawan lokal maupun mancanegara. Pantai ini juga popular karena suasana alamnya yang mirip dengan Tanah Lot di Bali.
Pantai Huluwa berada persis di Tanjung Desa Wakasihu, sehingga waktu perjalanan yang perlu ditempuh sekitar 36 km dari Teluk Ambon. Pantai Huluwa, Negeri Wakasihu, Kabupaten Maluku Tengah memiliki ketertarikannya. Meski susah sinyal di Pantai ini ramai dikunjungi wisatawan lokal, Warna airnya yang jernih dan berwana hijau pada kolamnya pun menyejukan mata. Selain kolamnya, lanjutnya, setiap sudut Pantai Huluwa pun cocok untuk tempat foto.
Memasuki Pantai Huluwa pun tidaklah mahal, pengunjung hanya dikenakan biaya Rp 5.000 per orangnya. Pantai ini pun tak hanya digunakan untuk bertamasya namun terkadang dijadikan tempat Pre-Wedding calon pasangan suami isteri.</string>
    <string name="pancurankuning">Pancuran Kuning berawal dari pengunjung yang berkunjung di Batu Layar dan  kesusahan mencari tempat istirahat. Seketika timbul di benak beliau untuk membangun tempat wisata bersama dengan saudaranya.
Jarak Pancuran Kuning dari kota Ambon di perkirakan 38 km.Tempat ini di bangun  sejak bulan September 2015.
Luas bangunan kurang dari 1 Hektare dan di kelola oleh Bapak Abdullah Sia dengan Abdul Rahman Sameth di Negeri Larike.
Tempat Wisata ini di lengkapi dengan Kolam renang yang mengandung air belerang dengan tarip per- orang Rp 5.000.
Tempat duduk panggung Rp 25.000, karcis masuk Rp 5.000 per-orang. Ayunan dan tempat duduk bawah tidak di kenakan biaya. Makanan yang di sediakan di tempat ini berupa gorengan kasbi dan pisang per-porsi harga Rp 10.000.
Pancuran ini di kunjungi oleh pengunjung dari kota dan dari luar kota. Sebelum covid ada wisatawan Manca Negara  Australia dengan Newzealand datang di tempat ini.
"Wisata yang di kelola saat ini mengalami penurunan secara draktis semenjak ada covid Penghasilan tidak memadai,apalagi kalau musim barat  semua menjadi berantakan," keluhnya.
Pengambilan dana yang diambil  dari BRI senilai Rp 30 jt untuk memperbaiki tempat yang berhamburan karna angin kencang .
"Penghasilan yang di dapat tiap bulannya tidak mencukupi untuk bayar setoran di Bank sekitar Rp 800 ribu," ungkapnya.
Abdullah mengatakan bangunan Musholla di pancuran berkat bantuan dari mantan Ibu Sekda Provinsi dan jembatan panjang atas bantuan dari Angksa Pura 1, Bandara Patimura,  Ambon.
"Dan tidak minta imbalan apapun.Mungkin dari beliaunya, berpikiran dengan bantuan yang di berikan untuk Wisata bisa berkembang kedepanya," katanya.
Pengunjung mengatakan kalau tidak musim barat, dirinya merasa nyaman datang di pancuran Kuning ,selain tempatnya sejuk, harganya terjangkau dan  kolam renangnya nya  mengandung air belerang.</string>
    <string name="batulayar">Sebuah Batu Karang di Negeri Larike yang konon katanya punya cerita legenda masyarakat Negeri Larike berasal dari sebuah Perahu ini adalah merupakan sebuah Destinasi Wisata Pantai yang diberi Nama Batu Layar yang ada di Negeri Larike Kecamatan Leihitu Barat Kabupaten Maluku Tengah pulau Ambon sekitar 45 menit dari kota Ambon.
Berdiri kokoh ditepian pantai sejak tempo dolo menjadi daya tarik tersendiri bagi wisatawan lokal maupun manca negara untuk mengabadikan momen di destinasi wisata ini.
Berada di tepian pantai dan dekat dengan jalan raya membuat destinasi ini tidak pernah sepi dari pengunjung apalagi di hari libur dan akhir pekan. Terutama karena biaya masuk ke wisata bahari ini gratis alias bebas.
Dilokasi ini juga tersedia aneka cemilan khas Maluku seperti manisan pala, sagu tumbu, pisang goreng panas dan minuman serta Snack yang dijajalkan para pedagang asli Negeri Larike.
Konon diceritakan, asal muasal munculnya batu layar adalah di sekitar tahun 1340 Masehi . Dimana sebuah kapal dari Pulau jawa tepatnya Madura yang bernama Rajawangi yang dinahkodai oleh Kiyai Raden Abdul Halik Prawiro Gusepa pada 09 Mei 1340 Masehi tiba di negeri yang juga dikenal dengan destinasi wisata Morea Raksasa itu.
Kemudian, Kiyai Raden Abdul Halik Prawiro Gusepa dijemput oleh Lima puluh orang laki-laki di salah satu sungai kecil yang kemudian disebut Seket.
Menurut Abubakar Ulath salah satu tokoh masyarakat negeri Larike, Seket artinya Lima puluh, dalam bahasa Larike disebut Hundana Hutudima atau lima puluh orang laki -laki.
Sementara sungai kecil sebagai tempat penyambutan sampai dengan saat ini dinamakan Waiseket atau air lima puluh.
Diceritakan, kemudian secara hukum alam, kapal Rajawangi berubah wujud menjadi batu yang berbentuk layar yang dalam bahasa Lerike disebut Hato Laedu atau Hato Kele. Yang kemudian menjadi saksi sejarah bagi masyarakat Negeri Larike.
Batu Layar juga menjadi salah satu Icon Maluku dan destinasi wisata di negeri Larike.</string>
    <string name="etika1">Membuang sampah pada tempatnya merupakan hal yang sangat sederhana tetapi mempunyai dampak yang sangat besar bagi lingkungan serta kelestarian alam di tempat kamu berlibur.</string>
    <string name="etika2">Jangan sekali-kali kamu merusak habitat makhluk hidup lain saat kamu berwisata dan jangan menganggu hewan dan merusak tanaman yang ada di tempat wisata tersebut.</string>
    <string name="etika4">Ketika kamu berlibur cobalah selalu bersikap sopan dan ramah dengan penduduk lokal.</string>
    <string name="etika5">Menghormati budaya lokal merupakan suatu bentuk apresiasi yang bisa kamu berikan kepada penduduk dan tempat kamu berlibur.</string>
    <string name="etika6">Kamu harus mematuhi peraturan tertulis dan juga peraturan tidak tertulis di tempat kamu berwisata.</string>
    <string name="etika7">Saat kamu berlibur ada baiknya jika kamu bijak dalam menggunakan layanan yang tersedia.</string>
    <string name="panduan1">1. Silahkan pilih menu yang tersedia, antara Etika, Wisata, atau Panduan</string>
    <string name="panduan2">2. Pada menu Etika anda dapat melihat Etika Berwista</string>
    <string name="panduan3">3. Pada menu Wisata anda bisa memilih tempat wisata yang anda inginkan, kemudian akan muncul dialog box yang mendeskripsikan tempat tersebut, beserta Button yang akan menuju ke Google Maps tempat tersebut berada</string>
    <string name="panduan4">4. Pada menu Panduan anda dapat melihat Panduan penggunaan Aplikasi ini.</string>
</resources>