<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    tools:context=".Etika"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                app:cardBackgroundColor="#28000000"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:id="@+id/back1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="#FF0505"
                    app:srcCompat="@drawable/baseline_keyboard_backspace_24" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="145dp"
                android:background="@drawable/shadow"
                android:elevation="10dp"
                android:gravity="center"
                android:text="ETIKA"
                android:textAlignment="center"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="2dp"
            app:cardBackgroundColor="#E6DCD5D5"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Buanglah sampah pada tempatnya"
                    android:textColor="#2E2D2D"
                    android:textStyle="bold"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/etika1"
                    android:textColor="#2E2D2D"
                    android:textSize="11sp" />



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="2dp"
            app:cardBackgroundColor="#E6DCD5D5"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Bersikap ramah, sopan, dan hormati penduduk lokal"
                    android:textColor="#2E2D2D"
                    android:textStyle="bold"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/etika4"
                    android:textColor="#2E2D2D"
                    android:textSize="11sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="2dp"
            app:cardBackgroundColor="#E6DCD5D5"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Hormati juga budaya lokalnya"
                    android:textColor="#2E2D2D"
                    android:textStyle="bold"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/etika5"
                    android:textColor="#2E2D2D"
                    android:textSize="11sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="2dp"
            app:cardBackgroundColor="#E6DCD5D5"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Patuhi peraturan yang ada"
                    android:textColor="#2E2D2D"
                    android:textStyle="bold"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/etika6"
                    android:textColor="#2E2D2D"
                    android:textSize="11sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="2dp"
            app:cardBackgroundColor="#E6DCD5D5"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Bijaklah dalam menggunakan layanan"
                    android:textColor="#2E2D2D"
                    android:textStyle="bold"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/etika7"
                    android:textColor="#2E2D2D"
                    android:textSize="11sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="2dp"
            app:cardBackgroundColor="#E6DCD5D5"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Hargai dan hormati makhluk hidup lain"
                    android:textColor="#2E2D2D"
                    android:textStyle="bold"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/etika2"
                    android:textColor="#2E2D2D"
                    android:textSize="11sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </ScrollView>


</RelativeLayout>